Adding slackclient and celery

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.2.10
+celery==4.4.7
 Django==3.1.1
 django-environ==0.4.5
 djangorestframework==3.11.1
 jsonfield==3.1.0
 pytz==2020.1
+slackclient==2.9.1
 sqlparse==0.3.1
