--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ django-environ==0.4.5
 djangorestframework==3.11.1
 jsonfield==3.1.0
 pytz==2020.1
+requests==2.22.0
 slackclient==2.9.1
 sqlparse==0.3.1
