--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 
 services:
-  webapp:
+  webapp: &webapp
     image: slack-to-xapi
     volumes:
       - ${PWD}/src/slack_events/:/app/slack_events/
@@ -14,9 +14,18 @@ services:
       - "8000:8000"
     depends_on: 
       - rabbitmq
+      - celery_worker
+  celery_worker:
+    <<: *webapp
+    command: celery -A main worker --loglevel=info
+    ports: []
+    depends_on:
+      - rabbitmq
+
+
   rabbitmq:
     image: rabbitmq:3.8.9-alpine
-
+  
 
 secrets:
   dotenv:
