Celery Task Queue and XApiStatement (#2)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 
 services:
-  webapp:
+  webapp: &webapp
     image: slack-to-xapi
     volumes:
       - ${PWD}/src/slack_events/:/app/slack_events/
@@ -12,6 +12,20 @@ services:
         target: /app/main/.env
     ports:
       - "8000:8000"
+    depends_on: 
+      - rabbitmq
+      - celery_worker
+  celery_worker:
+    <<: *webapp
+    command: celery -A main worker --loglevel=info
+    ports: []
+    depends_on:
+      - rabbitmq
+
+
+  rabbitmq:
+    image: rabbitmq:3.8.9-alpine
+  
 
 secrets:
   dotenv:
