--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.1.1
 django-environ==0.4.5
 djangorestframework==3.11.1
 jsonfield==3.1.0
+pycryptodome==3.9.8
 pyopenssl==19.1.0
 pytz==2020.1
 requests==2.24.0
