Adding back in celery worker (#10)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,21 @@ services:
     secrets:
       - source: dotenv
         target: /app/main/.env
+    depends_on: 
+      - rabbitmq
+      - celery_worker
+
+  celery_worker:
+    <<: *webapp
+    command: celery -A main worker --loglevel=info
+    ports: []
+    depends_on:
+      - rabbitmq
+
+  rabbitmq:
+    image: rabbitmq:3.8.9-alpine
+    ports:
+      - "5672:5672"
 
   nginx:
     image: nginx
@@ -18,6 +33,7 @@ services:
       - "80:80"
     depends_on:
       - webapp
+      - celery_worker
 
 secrets:
   dotenv:
